# pycimg

./: .coverage  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  README.rst  appveyor.yml  build.bat  build.sh  build_circleci.sh  build_linux.sh  build_osx.sh  build_thirdparty.sh  build_travis.sh  cimg.py  cimg_ext.h  conanfile.py  conanfile.txt  from_float16.h  generate.py  graph_info.json  inactive_travis.yml  install_conan_packages.py  pycimg.py  pycimg.pyx  pycimg_float16.pyx  pycimg_float32.pyx  pycimg_float64.pyx  pycimg_int16.pyx  pycimg_int32.pyx  pycimg_int8.pyx  pycimg_template.pyx  pycimg_uint16.pyx  pycimg_uint32.pyx  pycimg_uint8.pyx  pyproject.toml  requirements.txt  requirements_dev.txt  (+2 more)
.circleci/: config.yml
.circleci/images/primary/: Dockerfile  build_image.sh  test_image.sh
.github/workflows/: wheels.yml
docker/manylinux1_i686_cmake/: Dockerfile  build_image.sh
docker/manylinux1_x86_64_cmake/: Dockerfile  build_image.sh
docs/: Makefile  cimg.rst  conf.py  index.rst  make.bat  pycimg.rst
pycimg/: __init__.py  __init__.py.orig  __init___LOCAL_1123.py  __init___REMOTE_1123.py  cimg.py  pycimg.py
pycimg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: cimg_bindings.cpp  cimg_ext.h  pycimg.pyx  pycimg_template.pyx
test/: context.py  test.tiff  test_constructors.py  test_drawing.py  test_filtering_transforms.py  test_geometric_spatial.py  test_io.py  test_mathematical.py  test_ops.py  test_value_manipulation.py  test_vector_matrix_ops.py
tests/: context.py  test.tiff  test_constructors.py  test_drawing.py  test_filtering_transforms.py  test_geometric_spatial.py  test_instance_characteristics.py  test_io.py  test_mathematical.py  test_ops.py  test_value_manipulation.py
